infra/k8s/auth-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-mongo
  template:
    metadata:
      labels:
        app: auth-mongo
    spec:
      containers:
        - name: auth-mongo-pod
          image: mongo
          ports:
            - containerPort: 3011
---
apiVersion: v1
kind: Service
metadata:
  name: auth-mongo-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: auth-mongo
  ports:
    - name: auth-mongo-clusterip-port
      protocol: TCP
      port: 3011
      targetPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: auth-mongo-nodeport-srv
spec:
  type: NodePort
  selector:
    app: auth-mongo
  ports:
    - name: auth-mongo-nodeport-port
      protocol: TCP
      port: 3011
      targetPort: 27017
      nodePort: 30011
